[package]
name = "simple-redis"
version = "0.1.0"
authors = ["Ethan <liu.zy.ethan@gmail.com>"]
edition = "2021"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version =  "0.3.31", default-features = false }
anyhow = "1.0.93"
bytes = "1.8.0"
dashmap = "6.1.0"
enum_dispatch = "0.3.13"
lazy_static = "1.5.0"
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
